gitops/tools/demo-onprem/supply-positive-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-onprem-supply-positive
  namespace: demo-onprem
  labels:
    app.kubernetes.io/name: demo-onprem-supply-proof
spec:
  serviceAccountName: demo-onprem
  automountServiceAccountToken: false
  restartPolicy: Never
  securityContext:
    runAsNonRoot: true
    runAsUser: 65532
    runAsGroup: 65532
    seccompProfile: {type: RuntimeDefault}
  containers:
    - name: supply-proof
      image: harbor.imcherry5778.xyz/curated-platform/python@sha256:527c28b29498575b851ad88e7522ac7201bbd9e920d2c11b00ff2b39b315f5f8
      imagePullPolicy: IfNotPresent
      command: [sleep, "600"]
      resources:
        requests: {cpu: 5m, memory: 12Mi}
        limits: {cpu: 50m, memory: 32Mi}
      securityContext:
        allowPrivilegeEscalation: false
        capabilities: {drop: [ALL]}
        readOnlyRootFilesystem: true
